compiler/typ/tests/fixtures/diagnostics/0806_polyvar_coercion_payload_mismatch_05.ml.infer.expected
File "0806_polyvar_coercion_payload_mismatch_05.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0806_polyvar_coercion_payload_mismatch_05 is not a valid module name.

File "0806_polyvar_coercion_payload_mismatch_05.ml", line 2, characters 2-23:
2 |   (x :> [ `A of bool ])
      ^^^^^^^^^^^^^^^^^^^^^
Error: Type [ `A of int ] is not a subtype of [ `A of bool ]
       Type int is not a subtype of bool
